--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Oswald', sans-serif;
   margin: 0;
   padding: 0;
   background: #ccc;
@@ -38,11 +39,11 @@ body {
   cursor: default;
 }
 
-.name {
-  color: #fff;
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.2em;
-  line-height: 40px;
-  height: 40px;
-  border-bottom: 1px solid #888;
+h1 {
+  margin-left: 1em;
+}
+
+p {
+  margin-left: 2em;
+  margin-right: 2em;
 }
