--- a/style.css
+++ b/style.css
@@ -55,6 +55,15 @@ body {
   cursor: default;
 }
 
+@media screen and (min-width: 600px) {
+  .nav li {
+    width: 120px;
+    border-bottom: none;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.4em;
+  }
+
 .proj {
   color: black;
 }
