--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
 .logo {
   width: 4em;
   height: 4em;
-  /* margin-left: -5.8em; */
-  /* margin-top: .5em; */
 }
 
 .social {
@@ -59,6 +57,12 @@ body {
     height: 4em;
     line-height: 4em;
     font-size: 1.2em;
+  }
+
+  .nav a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
   }
 }
 
